# calder

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/calder/: __init__.py
src/calder/core/globals/: device.py
src/calder/core/samples/: event.py  histogram.py
src/calder/dev/: loader.py
src/calder/utils/: backend.py
tests/: test_api.py
